--- a/Day2/6 Structured API And DataFrame/Lab-6.7 - DataFrame Save DataFrame To Grid/save-dataframe-to-grid/pom.xml
+++ b/Day2/6 Structured API And DataFrame/Lab-6.7 - DataFrame Save DataFrame To Grid/save-dataframe-to-grid/pom.xml
@@ -19,10 +19,10 @@
                 insightedge-core
             </artifactId>
             <version>
-                12.2.1
+                14.0.0
             </version>
             <scope>
-                provided
+                compile
             </scope>
         </dependency>
     </dependencies>
