--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-.idea
 # Compiled source #
 ###################
 *.com
@@ -7,6 +6,15 @@
 *.exe
 *.o
 *.so
+
+# maven #
+#########
+target/
+
+# Intellij #
+############
+.idea
+*.iml
 
 # Packages #
 ############
