--- a/Day2/6 Structured API And DataFrame/Lab-6.6 - DataFrame Save And Load DataFrame From Grid/save-load-dataframe-from-grid/pom.xml
+++ b/Day2/6 Structured API And DataFrame/Lab-6.6 - DataFrame Save And Load DataFrame From Grid/save-load-dataframe-from-grid/pom.xml
@@ -10,6 +10,17 @@
     <artifactId>load-dataframe-from-grid</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
+    <repositories>
+        <repository>
+            <id>org.openspaces</id>
+            <url>http://maven-repository.openspaces.org</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>
