--- a/Day4/15 GraphX/Lab-15.5 - Flight Delay Demo/pom.xml
+++ b/Day4/15 GraphX/Lab-15.5 - Flight Delay Demo/pom.xml
@@ -14,6 +14,13 @@
         <gs.version>14.0.0</gs.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>org.openspaces</id>
+            <url>http://maven-repository.openspaces.org</url>
+        </repository>
+    </repositories>
+         
     <dependencies>
         <dependency>
             <groupId>org.gigaspaces</groupId>
