The scope of insightedge core dependencies have been set to provided since they are available in the container.

--- a/Day2/6 Structured API and DataFrame/Lab-6.5 - DataFrame Save and Load DataFrame from Grid/save-load-dataframe-from-grid/pom.xml
+++ b/Day2/6 Structured API and DataFrame/Lab-6.5 - DataFrame Save and Load DataFrame from Grid/save-load-dataframe-from-grid/pom.xml
@@ -33,7 +33,7 @@
                 14.0.0
             </version>
             <scope>
-                compile
+                provided
             </scope>
         </dependency>
     </dependencies>
