main class com.gigaspaces.ietraining.SparkStreamingExampl

--- a/Day3/11 Microbatch Streaming/Lab-11.4 - Spark Streaming Examples/spark-streaming-example/pom.xml
+++ b/Day3/11 Microbatch Streaming/Lab-11.4 - Spark Streaming Examples/spark-streaming-example/pom.xml
@@ -78,7 +78,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>com.your-package.MainClass</mainClass>
+                            <mainClass>com.gigaspaces.ietraining.SparkStreamingExample</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
