Update pom.xml with hadoop fix and update to IE 14.2.0 version

--- a/Day2/6 Structured API and DataFrame/Lab-6.5 - DataFrame Save and Load DataFrame from Grid/save-load-dataframe-from-grid/pom.xml
+++ b/Day2/6 Structured API and DataFrame/Lab-6.5 - DataFrame Save and Load DataFrame from Grid/save-load-dataframe-from-grid/pom.xml
@@ -23,63 +23,48 @@
 
     <dependencies>
         <dependency>
-            <groupId>
-                org.gigaspaces.insightedge
-            </groupId>
-            <artifactId>
-                insightedge-core
-            </artifactId>
-            <version>
-                14.0.0
-            </version>
-            <scope>
-                compile
-            </scope>
+            <groupId>org.gigaspaces.insightedge</groupId>
+            <artifactId>insightedge-core</artifactId>
+            <version>14.2.0</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
     <build>
         <plugins>
             <plugin>
-                <groupId>
-                    net.alchim31.maven
-                </groupId>
-                <artifactId>
-                    scala-maven-plugin
-                </artifactId>
-                <version>
-                    3.2.2
-                </version>
-                <executions>
-                    <execution>
+                <groupId>net.alchim31.maven</groupId>
+                <artifactId>scala-maven-plugin</artifactId>
+                <version>3.2.2</version>
+                <executions><execution>
                         <goals>
-                            <goal>
-                                compile
-                            </goal>
+                            <goal>compile</goal>
                         </goals>
                     </execution>
                 </executions>
             </plugin>
             <plugin>
-                <groupId>
-                    org.apache.maven.plugins
-                </groupId>
-                <artifactId>
-                    maven-shade-plugin
-                </artifactId>
-                <version>
-                    3.0.0
-                </version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.0.0</version>
                 <executions>
                     <execution>
-                        <phase>
-                            package
-                        </phase>
+                        <phase>package</phase>
                         <goals>
-                            <goal>
-                                shade
-                            </goal>
+                            <goal>shade</goal>
                         </goals>
+                        <configuration>
+                            <filters>
+                                <filter>
+                                    <artifact>*:*</artifact>
+                                    <excludes>
+                                        <exclude>META-INF/*.SF</exclude>
+                                        <exclude>META-INF/*.DSA</exclude>
+                                        <exclude>META-INF/*.RSA</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
