Changing common maven groupId from com.gigaspaces to ie.training

--- a/Day5/20 data-lake-acceleration/Lab-19-Query-speed-batch/ax-pu/pom.xml
+++ b/Day5/20 data-lake-acceleration/Lab-19-Query-speed-batch/ax-pu/pom.xml
@@ -41,7 +41,7 @@
                 <scope>provided</scope>
             </dependency>
             <dependency>
-                <groupId>com.gigaspaces</groupId>
+                <groupId>ie.training</groupId>
                 <artifactId>common</artifactId>
                 <version>${project.version}</version>
                 <scope>compile</scope>
