--- a/Day5/20 data-lake-acceleration/Lab-19-Query-speed-batch/remote-client/pom.xml
+++ b/Day5/20 data-lake-acceleration/Lab-19-Query-speed-batch/remote-client/pom.xml
@@ -18,7 +18,7 @@
         <scope>compile</scope>
     </dependency>
     <dependency>
-        <groupId>com.gigaspaces</groupId>
+        <groupId>ie.training</groupId>
         <artifactId>common</artifactId>
         <version>1.0-SNAPSHOT</version>
         <scope>compile</scope>
