--- a/Day5/20-data-lake-acceleration/Lab-19-Query-speed-batch/pom.xml
+++ b/Day5/20-data-lake-acceleration/Lab-19-Query-speed-batch/pom.xml
@@ -10,7 +10,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <gs.version>15.0.0-m20</gs.version>
+        <gs.version>15.0.0</gs.version>
     </properties>
 
     <build>
