--- a/Day4/18_JDBCV3/pom.xml
+++ b/Day4/18_JDBCV3/pom.xml
@@ -17,13 +17,13 @@
         <dependency>
             <groupId>org.gigaspaces</groupId>
             <artifactId>xap-openspaces</artifactId>
-            <version>16.0.0</version>
+            <version>16.1.0-m1</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.gigaspaces</groupId>
             <artifactId>xap-jdbc</artifactId>
-            <version>16.0.0</version>
+            <version>16.1.0-m1</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
