--- a/Day4/17_TieredStorage/feeder/pom.xml
+++ b/Day4/17_TieredStorage/feeder/pom.xml
@@ -17,6 +17,18 @@
             <version>${gs.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.gigaspaces</groupId>
+            <artifactId>xap-near-cache</artifactId>
+            <version>${gs.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.gigaspaces</groupId>
+            <artifactId>xap-near-cache-spring</artifactId>
+            <version>${gs.version}</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>org.example</groupId>
             <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
