--- a/Day4/17_TieredStorage/pom.xml
+++ b/Day4/17_TieredStorage/pom.xml
@@ -9,7 +9,6 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>common</module>
         <module>space</module>
         <module>feeder</module>
         <module>utils</module>
@@ -19,11 +18,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <gs.version>16.0.0</gs.version>
-        <hibernate.version>5.3.10.Final</hibernate.version>
-        <db.driver.groupId>org.postgresql</db.driver.groupId>
-        <db.driver.artifactId>postgresql</db.driver.artifactId>
-        <db.driver.version>42.2.12</db.driver.version>
+        <gs.version>16.2.0-m17</gs.version>
     </properties>
 
     <repositories>
