--- a/Day4/17_TieredStorage/pom.xml
+++ b/Day4/17_TieredStorage/pom.xml
@@ -18,7 +18,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <gs.version>16.2.0-m17</gs.version>
+        <gs.version>16.1.1</gs.version>
     </properties>
 
     <repositories>
