--- a/Day4/18_JDBCV3/jfeeder/pom.xml
+++ b/Day4/18_JDBCV3/jfeeder/pom.xml
@@ -23,6 +23,11 @@
         <version>1.0-SNAPSHOT</version>
         <scope>compile</scope>
     </dependency>
+        <dependency>
+            <groupId>com.gigaspaces</groupId>
+            <artifactId>xap-near-cache-spring</artifactId>
+            <version>16.2.0-m19</version>
+        </dependency>
     </dependencies>
 
 
