--- a/Day4/18_JDBCV3/pom.xml
+++ b/Day4/18_JDBCV3/pom.xml
@@ -17,13 +17,19 @@
         <dependency>
             <groupId>org.gigaspaces</groupId>
             <artifactId>xap-openspaces</artifactId>
-            <version>16.1.0-m3</version>
+            <version>${gs.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.gigaspaces</groupId>
+            <artifactId>xap-datagrid</artifactId>
+            <version>16.2.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.gigaspaces</groupId>
             <artifactId>xap-jdbc</artifactId>
-            <version>16.1.0-m3</version>
+            <version>${gs.version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
@@ -33,15 +39,15 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <gs.version>16.1.0-m3</gs.version>
+        <gs.version>16.2.0</gs.version>
     </properties>
 
-    <repositories>
+<!-- <repositories>
         <repository>
             <id>org.openspaces</id>
             <url>http://maven-repository.openspaces.org</url>
         </repository>
-    </repositories>
+    </repositories-->
 
 
 
