--- a/Day4/19_BLUEPRINT/jdbc_client/values.yaml
+++ b/Day4/19_BLUEPRINT/jdbc_client/values.yaml
@@ -3,7 +3,7 @@ project:
 java:
   version: 1.8
 gigaspaces:
-  version: 16.1.0-m7
+  version: 16.1.1
 service:
   name: JDBCService1
   description: service example
