--- a/Day4/18_JDBCV3/jfeeder/pom.xml
+++ b/Day4/18_JDBCV3/jfeeder/pom.xml
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>com.gigaspaces</groupId>
             <artifactId>xap-near-cache-spring</artifactId>
-            <version>16.2.0-m19</version>
+            <version>${gs.version}</version>
         </dependency>
     </dependencies>
 
