--- a/Day4/18_JDBCV3/reader/pom.xml
+++ b/Day4/18_JDBCV3/reader/pom.xml
@@ -18,6 +18,12 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.gigaspaces</groupId>
+            <artifactId>xap-premium-common</artifactId>
+            <version>${gs.version}</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
