--- a/Day4/18_JDBCV3/jfeeder/pom.xml
+++ b/Day4/18_JDBCV3/jfeeder/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>xap-near-cache-spring</artifactId>
             <version>${gs.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-dao</artifactId>
+            <version>2.0.3</version>
+        </dependency>
     </dependencies>
 
 
