--- a/Day4/18_JDBCV3/reader/pom.xml
+++ b/Day4/18_JDBCV3/reader/pom.xml
@@ -24,6 +24,12 @@
             <version>${gs.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>jfeeder</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
